--- a/src/InputEmail.css
+++ b/src/InputEmail.css
@@ -6,9 +6,13 @@
     @apply inline-block rounded-full py-2 px-7 mb-5;
     font-weight: bold;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    color: var(--blue);
 }
 .input-email__input-field:focus {
     outline: none;
+}
+.input-email__input-field::placeholder {
+    color: var(--light-blue);
 }
 
 @media screen and (min-width: 768px) {
