--- a/src/variables.css
+++ b/src/variables.css
@@ -6,6 +6,8 @@
     --primary-pink-hover: #DA6D97;
     --primary-white:rgb(251, 252, 254);
 
+    --error-color: #FF0000;
+
     --gray: #B8BCC0;
     --blue:rgb(54, 83, 107);
     --light-blue:rgb(108, 130, 148);
